# blink-detection

./: CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  main.cpp
